WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259139
REGRESSION: Emoji characters are sometimes drawn in text style erroneously
https://bugs.webkit.org/show_bug.cgi?id=259139
Summary
REGRESSION: Emoji characters are sometimes drawn in text style erroneously
Myles C. Maxfield
Reported
2023-07-11 23:32:46 PDT
REGRESSION: Emoji characters are sometimes drawn in text style erroneously
Attachments
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2023-07-11 23:32:53 PDT
<
rdar://problem/111411175
>
Myles C. Maxfield
Comment 2
2023-07-11 23:39:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15772
EWS
Comment 3
2023-07-16 01:36:42 PDT
Committed
266089@main
(3f69e13f0317): <
https://commits.webkit.org/266089@main
> Reviewed commits have been landed. Closing PR #15772 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug